[gd_scene load_steps=13 format=3 uid="uid://dpcbmmyqgi318"]

[ext_resource type="Script" path="res://Scripts/Player.gd" id="1_0xu1w"]
[ext_resource type="Shape3D" uid="uid://ft0541ga4xif" path="res://Player/player_agachado_area.tres" id="2_7da40"]
[ext_resource type="BoxMesh" uid="uid://hgh37msk0nx5" path="res://Player/playerAGACHADO.tres" id="2_muhkj"]
[ext_resource type="Material" uid="uid://e6rgae2l1s7k" path="res://Material/morte_material_3d.tres" id="4_87x5b"]

[sub_resource type="BoxShape3D" id="BoxShape3D_i0lus"]

[sub_resource type="BoxShape3D" id="BoxShape3D_2bpsw"]
size = Vector3(1, 0.6, 1)

[sub_resource type="Animation" id="Animation_pncry"]
resource_name = "Jump"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpringArm3D/Camera3D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0.0523599, 0, 0.0349066), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath("SpringArm3D/Camera3D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.1, 0), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_d11q5"]
resource_name = "Landing"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpringArm3D/Camera3D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0.0523599, 0, -0.0349066), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath("SpringArm3D/Camera3D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.1, 0), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_l7n5h"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpringArm3D/Camera3D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SpringArm3D/Camera3D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_8igky"]
resource_name = "Roll"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpringArm3D/Camera3D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, -0.0349066), Vector3(-6.28319, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath("SpringArm3D/Camera3D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.5, 0), Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_omy2r"]
_data = {
"Jump": SubResource("Animation_pncry"),
"Landing": SubResource("Animation_d11q5"),
"RESET": SubResource("Animation_l7n5h"),
"Roll": SubResource("Animation_8igky")
}

[sub_resource type="BoxMesh" id="BoxMesh_c8rxc"]
material = ExtResource("4_87x5b")

[node name="Player" type="CharacterBody3D"]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_0xu1w")

[node name="Corpo" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.000282049, 0.8, -0.00473976)
mesh = ExtResource("2_muhkj")

[node name="Standing_collision_shape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("BoxShape3D_i0lus")

[node name="Crouching_collision_shape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.799561, 0)
shape = SubResource("BoxShape3D_2bpsw")

[node name="AreaMORTE" type="Area3D" parent="." groups=["Player"]]
collision_layer = 2
collision_mask = 5

[node name="CollisionShape3D" type="CollisionShape3D" parent="AreaMORTE"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8, 0)
shape = ExtResource("2_7da40")

[node name="Node" type="Node3D" parent="."]

[node name="RayCast3D1" type="RayCast3D" parent="Node"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.516948, -0.245392, 0.511591)
target_position = Vector3(0, 2, 0)

[node name="RayCast3D2" type="RayCast3D" parent="Node"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.510624, -0.245421, -0.530312)
target_position = Vector3(0, 2, 0)

[node name="RayCast3D3" type="RayCast3D" parent="Node"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.523047, -0.245392, 0.532593)
target_position = Vector3(0, 2, 0)

[node name="RayCast3D4" type="RayCast3D" parent="Node"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.523148, -0.245392, -0.500689)
target_position = Vector3(0, 2, 0)

[node name="Nek" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.8, 0)

[node name="Head" type="Node3D" parent="Nek"]

[node name="Eyes" type="Node3D" parent="Nek/Head"]

[node name="SpringArm3D" type="SpringArm3D" parent="Nek/Head/Eyes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.639623)
collision_mask = 7
spring_length = 3.0
margin = 0.5

[node name="Camera3D" type="Camera3D" parent="Nek/Head/Eyes/SpringArm3D"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Nek/Head/Eyes"]
libraries = {
"": SubResource("AnimationLibrary_omy2r")
}

[node name="Morteparticulas" type="CPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.17712, 0)
emitting = false
amount = 16
one_shot = true
explosiveness = 1.0
randomness = 1.0
lifetime_randomness = 0.5
mesh = SubResource("BoxMesh_c8rxc")
direction = Vector3(0, 0, 0)
spread = 180.0
gravity = Vector3(0, 0, 0)
initial_velocity_max = 4.0
scale_amount_min = 0.1
scale_amount_max = 0.4

[connection signal="area_entered" from="AreaMORTE" to="." method="_on_area_morte_area_entered"]
